solved problem with the horizontal scroll on columns view

--- a/src/style/components/innerSections/innerSectionHome/feed.scss
+++ b/src/style/components/innerSections/innerSectionHome/feed.scss
@@ -26,7 +26,7 @@
 }
 .feed-columnsView{
     // overflow-x: scroll;
-    // width: 100%;
+    width: 100%;
 }
 
 // style for the letters that show up hen loading a post
