--- a/src/style/components/innerSections/innerSectionHome/feedViews/feedColumnsView.scss
+++ b/src/style/components/innerSections/innerSectionHome/feedViews/feedColumnsView.scss
@@ -12,4 +12,5 @@
     border-top: $border9;
     // border-radius: 1rem 1rem 1rem 0rem;
     flex-grow: 1;
+    overflow-x: scroll;
 }
